إضافة ميزة مشاركة الموقع الذكية

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         body, html { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: sans-serif; overflow-x: hidden; }
         #starCanvas { position: fixed; top: 0; left: 0; z-index: -1; }
         
-        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); position: sticky; top:0; z-index: 2000; }
-        .lang-btn { background: none; border: 1px solid var(--gold); color: var(--gold); padding: 5px 15px; cursor: pointer; border-radius: 20px; }
+        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); position: sticky; top:0; z-index: 2000; align-items: center; }
+        .nav-buttons { display: flex; gap: 10px; }
+        .nav-btn { background: none; border: 1px solid var(--gold); color: var(--gold); padding: 5px 15px; cursor: pointer; border-radius: 20px; font-size: 14px; transition: 0.3s; }
+        .nav-btn:hover { background: var(--gold); color: black; }
 
         .logo-container { text-align: center; margin-top: 20px; }
         .main-logo { font-size: 4em; color: var(--gold); text-shadow: 0 0 20px rgba(212, 175, 55, 0.5); }
@@ -24,25 +26,33 @@
         .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; text-decoration: none; color: inherit; }
         .item:hover { border-color: var(--gold); transform: translateY(-5px); box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3); }
         .item i { font-size: 30px; color: var(--gold); margin-bottom: 10px; }
-        .item.whatsapp-item i { color: #25D366; } /* لون الواتساب الأصلي */
+        .item.whatsapp-item i { color: #25D366; }
 
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 15px; overflow: hidden; }
         .close { position: absolute; top: 10px; left: 20px; color: white; font-size: 40px; cursor: pointer; z-index: 3001; }
         iframe { width: 100%; height: 100%; border: none; }
+        
+        /* رسالة التنبيه عند النسخ */
+        #toast { visibility: hidden; min-width: 250px; background-color: var(--gold); color: black; text-align: center; border-radius: 10px; padding: 16px; position: fixed; z-index: 4000; bottom: 30px; left: 50%; transform: translateX(-50%); font-weight: bold; }
+        #toast.show { visibility: visible; animation: fadein 0.5s, fadeout 0.5s 2.5s; }
+        @keyframes fadein { from {bottom: 0; opacity: 0;} to {bottom: 30px; opacity: 1;} }
+        @keyframes fadeout { from {bottom: 30px; opacity: 1;} to {bottom: 0; opacity: 0;} }
     </style>
 </head>
 <body onload="init()">
     <canvas id="starCanvas"></canvas>
+    <div id="toast">تم نسخ رابط الموقع! 🎉</div>
 
     <div class="top-nav">
         <div id="clock"></div>
-        <button class="lang-btn" id="langBtn" onclick="toggleLang()">English</button>
+        <div class="nav-buttons">
+            <button class="nav-btn" onclick="shareSite()"><i class="fas fa-share-alt"></i> <span id="shareText">مشاركة</span></button>
+            <button class="nav-btn" id="langBtn" onclick="toggleLang()">English</button>
+        </div>
     </div>
 
-    <div class="logo-container">
-        <h1 class="main-logo" id="logoText">محمد</h1>
-    </div>
+    <div class="logo-container"><h1 class="main-logo" id="logoText">محمد</h1></div>
 
     <div class="content">
         <h2 class="section-title" id="appsTitle">الألعاب والتطبيقات</h2>
@@ -74,17 +84,23 @@
             { id: 'admin', icon: 'fas fa-user-shield', ar: 'المدير', en: 'Admin', url: 'admin.html' }
         ];
 
+        function shareSite() {
+            if (navigator.share) {
+                navigator.share({ title: 'منصة محمد', text: 'شاهد موقعي المتكامل للألعاب والتطبيقات!', url: window.location.href });
+            } else {
+                navigator.clipboard.writeText(window.location.href);
+                let toast = document.getElementById("toast");
+                toast.className = "show";
+                setTimeout(() => { toast.className = toast.className.replace("show", ""); }, 3000);
+            }
+        }
+
         function renderApps() {
             const grid = document.getElementById('appGrid');
             grid.innerHTML = '';
             apps.forEach(app => {
                 const action = app.external ? `onclick="window.open('${app.url}', '_blank')"` : `onclick="openApp('${app.url}')"`;
-                const specialClass = app.id === 'whatsapp' ? 'whatsapp-item' : '';
-                grid.innerHTML += `
-                    <div class="item ${specialClass}" ${action}>
-                        <i class="${app.icon}"></i><br>
-                        <span>${currentLang === 'ar' ? app.ar : app.en}</span>
-                    </div>`;
+                grid.innerHTML += `<div class="item ${app.id === 'whatsapp' ? 'whatsapp-item' : ''}" ${action}><i class="${app.icon}"></i><br><span>${currentLang === 'ar' ? app.ar : app.en}</span></div>`;
             });
         }
 
@@ -94,6 +110,8 @@
             document.getElementById('logoText').innerText = currentLang === 'ar' ? 'محمد' : 'MOHAMED';
             document.getElementById('appsTitle').innerText = currentLang === 'ar' ? 'الألعاب والتطبيقات' : 'Games & Apps';
             document.getElementById('langBtn').innerText = currentLang === 'ar' ? 'English' : 'العربية';
+            document.getElementById('shareText').innerText = currentLang === 'ar' ? 'مشاركة' : 'Share';
+            document.getElementById('toast').innerText = currentLang === 'ar' ? 'تم نسخ رابط الموقع! 🎉' : 'Link Copied! 🎉';
             renderApps();
         }
 
