--- a/index.html
+++ b/index.html
@@ -23,26 +23,22 @@
         .section-title { color: var(--gold); margin: 30px 0 15px; border-bottom: 2px solid var(--gold); width: 80%; text-align: center; padding-bottom: 5px; }
 
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 15px; width: 100%; max-width: 1000px; }
-        .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; text-decoration: none; color: inherit; }
+        .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; }
         .item:hover { border-color: var(--gold); transform: translateY(-5px); box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3); }
         .item i { font-size: 30px; color: var(--gold); margin-bottom: 10px; }
-        .item.whatsapp-item i { color: #25D366; }
+
+        /* قسم التعليقات */
+        .comments-section { width: 90%; max-width: 800px; margin-top: 50px; background: rgba(20, 20, 20, 0.8); padding: 20px; border-radius: 15px; border: 1px solid #333; }
+        #disqus_thread { width: 100%; }
 
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 15px; overflow: hidden; }
         .close { position: absolute; top: 10px; left: 20px; color: white; font-size: 40px; cursor: pointer; z-index: 3001; }
         iframe { width: 100%; height: 100%; border: none; }
-        
-        /* رسالة التنبيه عند النسخ */
-        #toast { visibility: hidden; min-width: 250px; background-color: var(--gold); color: black; text-align: center; border-radius: 10px; padding: 16px; position: fixed; z-index: 4000; bottom: 30px; left: 50%; transform: translateX(-50%); font-weight: bold; }
-        #toast.show { visibility: visible; animation: fadein 0.5s, fadeout 0.5s 2.5s; }
-        @keyframes fadein { from {bottom: 0; opacity: 0;} to {bottom: 30px; opacity: 1;} }
-        @keyframes fadeout { from {bottom: 30px; opacity: 1;} to {bottom: 0; opacity: 0;} }
     </style>
 </head>
 <body onload="init()">
     <canvas id="starCanvas"></canvas>
-    <div id="toast">تم نسخ رابط الموقع! 🎉</div>
 
     <div class="top-nav">
         <div id="clock"></div>
@@ -57,6 +53,12 @@
     <div class="content">
         <h2 class="section-title" id="appsTitle">الألعاب والتطبيقات</h2>
         <div class="grid" id="appGrid"></div>
+
+        <h2 class="section-title" id="commentsTitle">ركن الزوار</h2>
+        <div class="comments-section">
+            <p style="text-align: center; font-size: 0.9em; color: var(--gold);">اترك بصمتك هنا!</p>
+            <div id="disqus_thread"></div>
+        </div>
     </div>
 
     <div id="gameModal" class="modal">
@@ -65,6 +67,14 @@
     </div>
 
     <script>
+        // دالة Disqus للتعليقات
+        (function() { 
+            var d = document, s = d.createElement('script');
+            s.src = 'https://mohamed-empire.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+
         let currentLang = 'ar';
         const apps = [
             { id: 'whatsapp', icon: 'fab fa-whatsapp', ar: 'واتساب', en: 'WhatsApp', url: 'https://wa.me/21655391749', external: true },
@@ -84,23 +94,12 @@
             { id: 'admin', icon: 'fas fa-user-shield', ar: 'المدير', en: 'Admin', url: 'admin.html' }
         ];
 
-        function shareSite() {
-            if (navigator.share) {
-                navigator.share({ title: 'منصة محمد', text: 'شاهد موقعي المتكامل للألعاب والتطبيقات!', url: window.location.href });
-            } else {
-                navigator.clipboard.writeText(window.location.href);
-                let toast = document.getElementById("toast");
-                toast.className = "show";
-                setTimeout(() => { toast.className = toast.className.replace("show", ""); }, 3000);
-            }
-        }
-
         function renderApps() {
             const grid = document.getElementById('appGrid');
             grid.innerHTML = '';
             apps.forEach(app => {
                 const action = app.external ? `onclick="window.open('${app.url}', '_blank')"` : `onclick="openApp('${app.url}')"`;
-                grid.innerHTML += `<div class="item ${app.id === 'whatsapp' ? 'whatsapp-item' : ''}" ${action}><i class="${app.icon}"></i><br><span>${currentLang === 'ar' ? app.ar : app.en}</span></div>`;
+                grid.innerHTML += `<div class="item" ${action}><i class="${app.icon}"></i><br><span>${currentLang === 'ar' ? app.ar : app.en}</span></div>`;
             });
         }
 
@@ -109,9 +108,9 @@
             document.documentElement.dir = currentLang === 'ar' ? 'rtl' : 'ltr';
             document.getElementById('logoText').innerText = currentLang === 'ar' ? 'محمد' : 'MOHAMED';
             document.getElementById('appsTitle').innerText = currentLang === 'ar' ? 'الألعاب والتطبيقات' : 'Games & Apps';
+            document.getElementById('commentsTitle').innerText = currentLang === 'ar' ? 'ركن الزوار' : 'Guestbook';
             document.getElementById('langBtn').innerText = currentLang === 'ar' ? 'English' : 'العربية';
             document.getElementById('shareText').innerText = currentLang === 'ar' ? 'مشاركة' : 'Share';
-            document.getElementById('toast').innerText = currentLang === 'ar' ? 'تم نسخ رابط الموقع! 🎉' : 'Link Copied! 🎉';
             renderApps();
         }
 
