--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohamed Empire | Anime Edition</title>
+    <title>Mohamed Empire | Full Edition</title>
     <link rel="icon" href="https://img.icons8.com/flat-round/64/crown.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -11,37 +11,32 @@
         body, html { margin: 0; padding: 0; background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; overflow-x: hidden; scroll-behavior: smooth; }
         #starCanvas { position: fixed; top: 0; left: 0; z-index: -1; }
         
-        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.7); backdrop-filter: blur(15px); position: sticky; top:0; z-index: 2000; border-bottom: 1px solid rgba(212,175,55,0.2); }
-        .nav-btn { background: var(--glass); border: 1px solid var(--gold); color: var(--gold); padding: 8px 18px; cursor: pointer; border-radius: 25px; font-size: 14px; }
+        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.7); backdrop-filter: blur(15px); position: sticky; top:0; z-index: 2000; border-bottom: 1px solid rgba(212,175,55,0.2); align-items: center; }
+        .nav-btn { background: var(--glass); border: 1px solid var(--gold); color: var(--gold); padding: 8px 18px; cursor: pointer; border-radius: 25px; font-size: 14px; transition: 0.3s; }
+        .nav-btn:hover { background: var(--gold); color: black; }
 
         .logo-container { text-align: center; margin: 30px 0; }
         .main-logo { font-size: 4em; color: var(--gold); text-shadow: 0 0 30px rgba(212, 175, 55, 0.6); }
 
-        /* قسم الأنمي الجديد */
-        .anime-gallery { text-align: center; margin: 40px auto; width: 90%; max-width: 600px; }
-        .anime-card { 
-            position: relative; 
-            cursor: pointer; 
-            border: 3px solid var(--gold); 
-            border-radius: 20px; 
-            overflow: hidden; 
-            box-shadow: 0 0 25px rgba(212, 175, 55, 0.4);
-            transition: transform 0.3s;
-        }
-        .anime-card:hover { transform: scale(1.02); }
-        .anime-card img { width: 100%; height: 350px; object-fit: cover; display: block; transition: opacity 0.5s; }
-        .anime-hint { position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: var(--gold); padding: 5px 15px; border-radius: 10px; font-size: 12px; }
+        /* معرض الأنمي */
+        .anime-section { text-align: center; margin: 20px auto; width: 90%; max-width: 500px; }
+        .anime-card { position: relative; cursor: pointer; border: 2px solid var(--gold); border-radius: 15px; overflow: hidden; box-shadow: 0 0 20px rgba(212, 175, 55, 0.3); }
+        .anime-card img { width: 100%; height: 300px; object-fit: cover; display: block; transition: 0.5s; }
+        .anime-hint { position: absolute; bottom: 5px; left: 5px; background: rgba(0,0,0,0.6); color: var(--gold); padding: 4px 10px; border-radius: 8px; font-size: 11px; }
 
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 15px; width: 90%; max-width: 1000px; margin: auto; }
+        /* الشبكة */
+        .content { padding-bottom: 50px; }
+        .section-title { color: var(--gold); text-align: center; margin: 40px 0 20px; font-size: 1.8em; border-bottom: 1px solid var(--gold); display: inline-block; width: 60%; left: 20%; position: relative; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); gap: 15px; width: 95%; max-width: 1000px; margin: auto; }
         .item { background: var(--glass); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
-        .item:hover { border-color: var(--gold); transform: translateY(-5px); }
-        .item i { font-size: 30px; color: var(--gold); margin-bottom: 10px; display: block; }
-
-        .section-title { color: var(--gold); text-align: center; margin: 40px 0 20px; font-size: 1.8em; }
+        .item:hover { border-color: var(--gold); transform: translateY(-5px); background: rgba(212, 175, 55, 0.1); }
+        .item i { font-size: 28px; color: var(--gold); margin-bottom: 10px; display: block; }
+        .item.wa-item i { color: #25D366; }
 
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 20px; overflow: hidden; }
         .close { position: absolute; top: 10px; left: 20px; color: #fff; font-size: 40px; cursor: pointer; z-index: 3001; }
+        iframe { width: 100%; height: 100%; border: none; }
     </style>
 </head>
 <body onload="init()">
@@ -50,23 +45,24 @@
     <nav class="top-nav">
         <div id="clock"></div>
         <div class="nav-buttons">
-            <button class="nav-btn" onclick="shareSite()"><i class="fas fa-share"></i></button>
-            <button class="nav-btn" onclick="toggleLang()">EN/AR</button>
+            <button class="nav-btn" onclick="shareSite()"><i class="fas fa-share-alt"></i></button>
+            <button class="nav-btn" onclick="toggleLang()" id="langBtn">English</button>
         </div>
     </nav>
 
     <div class="logo-container"><h1 class="main-logo" id="logoText">محمد</h1></div>
 
-    <h2 class="section-title" id="animeTitle">عالم الأنمي</h2>
-    <div class="anime-gallery">
+    <div class="anime-section">
         <div class="anime-card" onclick="changeAnime()">
             <img id="animeImg" src="https://pic.re/image" alt="Anime">
             <div class="anime-hint" id="animeHint">اضغط لتغيير الصورة 🌀</div>
         </div>
     </div>
 
-    <h2 class="section-title" id="appsTitle">التطبيقات</h2>
-    <div class="grid" id="appGrid"></div>
+    <div class="content">
+        <h2 class="section-title" id="appsTitle">المجموعة الكاملة</h2>
+        <div class="grid" id="appGrid"></div>
+    </div>
 
     <div id="gameModal" class="modal">
         <span class="close" onclick="closeApp()">&times;</span>
@@ -75,29 +71,37 @@
 
     <script>
         let currentLang = 'ar';
-        
-        // ميزة تغيير الأنمي
-        function changeAnime() {
-            const img = document.getElementById('animeImg');
-            img.style.opacity = '0'; // تأثير التلاشي
-            setTimeout(() => {
-                // نستخدم رابط يوفر صور أنمي عشوائية
-                img.src = "https://www.pic.re/image?" + new Date().getTime();
-                img.style.opacity = '1';
-            }, 500);
-        }
-
         const apps = [
             { id: 'wa', icon: 'fab fa-whatsapp', ar: 'واتساب', en: 'WhatsApp', url: 'https://wa.me/21655391749', ext: true },
             { id: 'sn', icon: 'fas fa-gamepad', ar: 'الثعبان', en: 'Snake', url: 'snake.html' },
             { id: 'rc', icon: 'fas fa-car', ar: 'السباق', en: 'Racing', url: 'race.html' },
-            { id: 'cl', icon: 'fas fa-calculator', ar: 'الحاسبة', en: 'Calculator', url: 'calc.html' }
+            { id: 'sh', icon: 'fas fa-crosshairs', ar: 'الصائد', en: 'Shooter', url: 'shooter.html' },
+            { id: 'jp', icon: 'fas fa-arrow-up', ar: 'القفز', en: 'Jump', url: 'jump.html' },
+            { id: 'wk', icon: 'fas fa-hammer', ar: 'ضرب الذهب', en: 'Whack', url: 'whack.html' },
+            { id: 'mm', icon: 'fas fa-brain', ar: 'الذاكرة', en: 'Memory', url: 'memory.html' },
+            { id: 'cl', icon: 'fas fa-calculator', ar: 'الحاسبة', en: 'Calculator', url: 'calc.html' },
+            { id: 'td', icon: 'fas fa-tasks', ar: 'المهام', en: 'Todo', url: 'todo.html' },
+            { id: 'nt', icon: 'fas fa-sticky-note', ar: 'ملاحظات', en: 'Notes', url: 'notes.html' },
+            { id: 'wt', icon: 'fas fa-cloud-sun', ar: 'الطقس', en: 'Weather', url: 'weather.html' },
+            { id: 'sp', icon: 'fas fa-shopping-bag', ar: 'المتجر', en: 'Shop', url: 'shop.html' },
+            { id: 'fm', icon: 'fas fa-users', ar: 'المنتدى', en: 'Forum', url: 'forum.html' },
+            { id: 'ct', icon: 'fas fa-envelope', ar: 'اتصل بي', en: 'Contact', url: 'contact.html' },
+            { id: 'ad', icon: 'fas fa-user-shield', ar: 'المدير', en: 'Admin', url: 'admin.html' }
         ];
+
+        function changeAnime() {
+            const img = document.getElementById('animeImg');
+            img.style.opacity = '0.3';
+            setTimeout(() => {
+                img.src = "https://www.pic.re/image?" + new Date().getTime();
+                img.style.opacity = '1';
+            }, 300);
+        }
 
         function renderApps() {
             const grid = document.getElementById('appGrid');
             grid.innerHTML = apps.map(app => `
-                <div class="item" onclick="${app.ext ? `window.open('${app.url}')` : `openApp('${app.url}')`}">
+                <div class="item ${app.id === 'wa' ? 'wa-item' : ''}" onclick="${app.ext ? `window.open('${app.url}')` : `openApp('${app.url}')`}">
                     <i class="${app.icon}"></i>
                     <span>${currentLang === 'ar' ? app.ar : app.en}</span>
                 </div>`).join('');
@@ -107,15 +111,20 @@
             currentLang = currentLang === 'ar' ? 'en' : 'ar';
             document.documentElement.dir = currentLang === 'ar' ? 'rtl' : 'ltr';
             document.getElementById('logoText').innerText = currentLang === 'ar' ? 'محمد' : 'MOHAMED';
-            document.getElementById('animeTitle').innerText = currentLang === 'ar' ? 'عالم الأنمي' : 'Anime World';
+            document.getElementById('appsTitle').innerText = currentLang === 'ar' ? 'المجموعة الكاملة' : 'Full Collection';
+            document.getElementById('langBtn').innerText = currentLang === 'ar' ? 'English' : 'العربية';
             document.getElementById('animeHint').innerText = currentLang === 'ar' ? 'اضغط لتغيير الصورة 🌀' : 'Click to Change 🌀';
             renderApps();
+        }
+
+        function shareSite() {
+            if(navigator.share) navigator.share({title: 'Mohamed Empire', url: window.location.href});
+            else alert("تم نسخ الرابط!");
         }
 
         function openApp(url) { document.getElementById('appFrame').src = url; document.getElementById('gameModal').style.display = "block"; }
         function closeApp() { document.getElementById('gameModal').style.display = "none"; document.getElementById('appFrame').src = ""; }
 
-        // النجوم
         const canvas = document.getElementById('starCanvas');
         const ctx = canvas.getContext('2d');
         let stars = [];
@@ -128,7 +137,7 @@
             ctx.fillStyle = "#d4af37";
             stars.forEach(s => {
                 ctx.beginPath(); ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill();
-                s.y += 0.5; if(s.y > canvas.height) s.y = 0;
+                s.y += 0.4; if(s.y > canvas.height) s.y = 0;
             });
             requestAnimationFrame(drawStars);
         }
